# proto-build-kit

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml  tag.yml
examples/: extract_annotations.rs  stage_compile.rs
src/: codegen_tonic.rs  compile.rs  errors.rs  extract.rs  lib.rs  stage.rs
tests/: end_to_end.rs
